--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -4,7 +4,8 @@ jobs:
   check-bats-version:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-      - run: npm install -g bats
-      - run: bats -v
+      -name: TerraformService_Caller
+      -uses: distributhor/workflow-webhook
+      -with:
+        url: "http://807029cb60f1.ngrok.io/api/terraform/test"
+        json: ''
