--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: TerraformService_Caller
-        uses: distributhor/workflow-webhook
+        uses: distributhor/workflow-webhook@v1
         with:
           url: "http://807029cb60f1.ngrok.io/api/terraform/test"
           json: ''
