--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -8,3 +8,4 @@ jobs:
         uses: distributhor/workflow-webhook@v1
         with:
           webhook_url: "http://807029cb60f1.ngrok.io/api/terraform/test"
+          data: '{ "weapon": "hammer", "drink" : "beer" }'
