--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -6,6 +6,6 @@ jobs:
     steps:
       - name: TerraformService_Caller
         uses: distributhor/workflow-webhook@v1
-        with:
+        env:
           webhook_url: "http://807029cb60f1.ngrok.io/api/terraform/test"
           data: '{ "weapon": "hammer", "drink" : "beer" }'
