--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -7,6 +7,6 @@ jobs:
       - name: TerraformService_Caller
         uses: distributhor/workflow-webhook@v1
         env:
-          webhook_url: "http://b9cba9486100.ngrok.io/api/terraform/test"
+          webhook_url: "http://ac3c8268c0e4.ngrok.io/api/terraform/command"
           webhook_secret: "zzzzzzzzzzzzzzzzzzzsasdasgasdasdasd"
-          data: '{ "weapon": "hammer", "drink" : "beer" }'
+          data: '{ "Argument": "plan", "ArtifactUrl" : "blablabla", "PrNumber":"${{github.event.number}}" }'
