--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -17,4 +17,4 @@ jobs:
          env:
           webhook_url: "http://ac3c8268c0e4.ngrok.io/api/terraform/command"
           webhook_secret: "zzzzzzzzzzzzzzzzzzzsasdasgasdasdasd"
-          data: '{ "Argument": "GITHUB_REF", "ArtifactUrl" : $PULL_NUMBER, "PrNumber":${{github.event.number}} }'
+          data: '{ "Argument": "GITHUB_REF", "ArtifactUrl" : ${{github.repository}}, "PrNumber":${{github.event.number}} }'
