--- a/.github/workflows/learn-github-actions.yml
+++ b/.github/workflows/learn-github-actions.yml
@@ -1,7 +1,7 @@
 name: learn-github-actions
 on: 
   pull_request:
-    types: [opened, closed]
+    types: [opened, closed, edited]
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
